# cocos2d-x

./: .gitmodules  CMakeLists.txt
cocos/: Android.mk  CMakeLists.txt  cocos2d-prefix.pch  cocos2d.h
cocos/2d/: CCActionManager.cpp  CCLabel.cpp  CCLayoutBox.cpp  CCLayoutBox.h  CCLayoutNode.cpp  CCLayoutNode.h  CCNode.cpp  CCNode.h  CCParticleSystemQuad.cpp  CCPhysicsNode.cpp  CCPhysicsNode.h  CCProgressTimer.cpp  CCProgressTimer.h  CCScene.cpp  CCScene.h  CCSpriteFrameCache.cpp  CCSpriteFrameCache.h  CMakeLists.txt  cocos2d.vcxproj  cocos2d.vcxproj.filters  cocos2d_winrt.vcxproj  cocos2d_winrt.vcxproj.filters  cocos2d_wp8.vcxproj  cocos2d_wp8.vcxproj.filters
cocos/base/: CCConfiguration.cpp  CCConfiguration.h
cocos/editor-support/cocosbuilder/: Android.mk  CCBAnimationManager.cpp  CCBAnimationManager.h  CCBFileLoader.h  CCBMemberVariableAssigner.h  CCBReader.cpp  CCBReader.h  CCBReaderParams.cpp  CCBReaderParams.h  CCBSelectorResolver.h  CCButtonLoader.cpp  CCButtonLoader.h  CCControlButtonLoader.cpp  CCControlButtonLoader.h  CCControlLoader.h  CCLabelBMFontLoader.cpp  CCLabelBMFontLoader.h  CCLabelTTFLoader.cpp  CCLabelTTFLoader.h  CCLayerColorLoader.cpp  CCLayerColorLoader.h  CCLayerGradientLoader.cpp  CCLayerGradientLoader.h  CCLayerLoader.h  CCLayoutBoxLoader.cpp  CCLayoutBoxLoader.h  CCMenuItemImageLoader.h  CCMenuItemLoader.h  CCNode+CCBRelativePositioning.cpp  CCNode+CCBRelativePositioning.h  CCNodeLoader.cpp  CCNodeLoader.h  CCNodeLoaderLibrary.cpp  CCParticleSystemQuadLoader.cpp  CCParticleSystemQuadLoader.h  CCPhysicsNodeLoader.cpp  CCPhysicsNodeLoader.h  CCProgressTimerLoader.cpp  CCProgressTimerLoader.h  CCScale9SpriteLoader.cpp  (+15 more)
cocos/editor-support/cocosbuilder/proj.win32/: libCocosBuilder.vcxproj  libCocosBuilder.vcxproj.filters
cocos/editor-support/cocostudio/: CCBone.h
cocos/editor-support/spine/: Android.mk  CMakeLists.txt  SkeletonAnimation.cpp  SkeletonAnimation.h  SkeletonJson.c  spine-cocos2dx.cpp
cocos/editor-support/spine/proj.win32/: libSpine.vcxproj  libSpine.vcxproj.filters
cocos/editor-support/spine/proj.wp8/: libSpine.vcxproj  libSpine.vcxproj.filters
cocos/network/: CMakeLists.txt
cocos/physics/: CCPhysicsBody.cpp  CCPhysicsBody.h  CCPhysicsShape.cpp  CCPhysicsShape.h  CCPhysicsWorld.cpp  CCPhysicsWorld.h
cocos/platform/: CCApplicationProtocol.h  CCGLViewProtocol.cpp  CCGLViewProtocol.h  CCImage.cpp  CCImage.h
cocos/platform/android/: CCApplication.cpp  CCApplication.h
cocos/platform/android/java/src/org/cocos2dx/lib/: Cocos2dxActivity.java  Cocos2dxHelper.java
cocos/platform/android/jni/: Java_org_cocos2dx_lib_Cocos2dxHelper.cpp  Java_org_cocos2dx_lib_Cocos2dxHelper.h
cocos/platform/ios/: CCApplication.h  CCApplication.mm  CCDevice.mm  cocos2d-prefix.pch
cocos/platform/linux/: CCApplication.cpp  CCApplication.h  CCDevice.cpp
cocos/platform/mac/: CCApplication.h  CCApplication.mm  CCDevice.mm  cocos2d-prefix.pch
cocos/platform/win32/: CCApplication.cpp  CCApplication.h  CCDevice.cpp
cocos/platform/winrt/: CCApplication.cpp  CCApplication.h  CCDevice.cpp
cocos/renderer/: CCTexture2D.cpp  CCTexture2D.h
cocos/scripting/lua-bindings/manual/: lua_cocos2dx_physics_manual.cpp
cocos/ui/: CCProtectedNode.cpp  UIScrollView.cpp  UIScrollView.h
extensions/: Android.mk  CMakeLists.txt  cocos-ext.h
extensions/EasyNDK/: NDKHelper.cpp
extensions/EasyNDK/proj.android/jni/: Android.mk
extensions/GUI/CCControlExtension/: CCButton.cpp  CCButton.h  CCControl.h  CCControlExtensions.h  CCScale9Sprite.cpp  CCScale9Sprite.h
extensions/GUI/CCEditBox/: CCEditBox.cpp  CCEditBoxImplAndroid.cpp  CCEditBoxImplIOS.mm  CCEditBoxImplMac.mm  CCEditBoxImplWin.cpp  CCEditBoxImplWp8.cpp
extensions/GUI/CCScrollView/: CCScrollView.cpp  CCScrollView.h
extensions/proj.win32/: libExtensions.vcxproj  libExtensions.vcxproj.filters
templates/: cocos2dx_files.json
templates/cpp-template-default/: CMakeLists.txt
templates/cpp-template-default/proj.android/: .cproject
templates/cpp-template-default/proj.win32/: HelloCpp.vcxproj
tests/cpp-empty-test/: CMakeLists.txt
tests/cpp-tests/: CMakeLists.txt
tests/cpp-tests/Classes/ExtensionsTest/CocosBuilderTest/AnimationsTest/: AnimationsTestLayer.cpp  AnimationsTestLayer.h
tests/cpp-tests/Classes/ExtensionsTest/CocosBuilderTest/ButtonTest/: ButtonTestLayer.cpp  ButtonTestLayer.h
tests/cpp-tests/Classes/ExtensionsTest/CocosBuilderTest/HelloCocosBuilder/: HelloCocosBuilderLayer.cpp  HelloCocosBuilderLayer.h
tests/cpp-tests/Classes/ExtensionsTest/CocosBuilderTest/MenuTest/: MenuTestLayer.cpp  MenuTestLayer.h
tests/cpp-tests/Classes/ExtensionsTest/CocosBuilderTest/TestHeader/: TestHeaderLayer.cpp  TestHeaderLayer.h
tests/cpp-tests/Classes/ExtensionsTest/CocosBuilderTest/TimelineCallbackTest/: TimelineCallbackTestLayer.cpp  TimelineCallbackTestLayer.h
tests/cpp-tests/Classes/PhysicsTest/: PhysicsTest.cpp
tests/cpp-tests/Classes/SpineTest/: SpineTest.cpp
tests/cpp-tests/Classes/Texture2dTest/: Texture2dTest.cpp  Texture2dTest.h
tests/cpp-tests/Classes/UITest/CocoStudioGUITest/UIScrollViewTest/: UIScrollViewTest.cpp
tests/cpp-tests/Resources/Images/: ETC2_RGB.pkm  ETC2_RGBA.pkm  ETC2_RGBA1.pkm  test_image_etc1_v3.pvr  test_image_etc2_rgb.pvr  test_image_etc2_rgba.pvr  test_image_etc2_rgba1.pvr
